# aces-dev

./: CMakeLists.txt  Makefile
apps/: CMakeLists.txt
apps/acesinfo/: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/aces/: CMakeLists.txt  aces.c  aces.h  half.h  halfTest.c
libs/adx/: CMakeLists.txt  dpx.hh
